set(HDF5_VOL_CACHE_HEADERS
  ${CMAKE_CURRENT_SOURCE_DIR}/H5VLcache_ext.h
)

set(HDF5_VOL_CACHE_SRCS
    ${CMAKE_CURRENT_SOURCE_DIR}/cache_utils.c
    ${CMAKE_CURRENT_SOURCE_DIR}/cache_new_h5api.c
    ${CMAKE_CURRENT_SOURCE_DIR}/H5LS.c
    ${CMAKE_CURRENT_SOURCE_DIR}/H5LS_SSD.c
    ${CMAKE_CURRENT_SOURCE_DIR}/H5LS_RAM.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../utils/debug.c
)


add_library(hdf5_vol_cache SHARED ${HDF5_VOL_CACHE_SRCS})

target_include_directories(hdf5_vol_cache 
  PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(hdf5_vol_cache PRIVATE ${LINK_LIBS})

install(
  FILES
    ${HDF5_VOL_CACHE_HEADERS}
  DESTINATION
    ${HDF5_VOL_CACHE_INSTALL_INCLUDE_DIR}
  COMPONENT
    headers
)

install(
  TARGETS
    hdf5_vol_cache
  EXPORT
    ${HDF5_VOL_CACHE_EXPORTED_TARGETS}
  LIBRARY DESTINATION ${HDF5_VOL_CACHE_INSTALL_LIB_DIR}
  ARCHIVE DESTINATION ${HDF5_VOL_CACHE_INSTALL_LIB_DIR}
)
